--- a/experimentals.html
+++ b/experimentals.html
@@ -56,13 +56,12 @@
             }
 
             #experimental-grid {
-              display: grid;
-              grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-              gap: 1.5rem;
+              display: flex;
+              flex-direction: column;
+              gap: 2rem;
               margin-top: 2rem;
             }
 
-            /* MEDIA CARD STYLES (no shadow DOM) */
             media-card {
               background: #fff;
               border-radius: var(--card-radius);
@@ -73,6 +72,9 @@
               align-items: center;
               gap: 0.75rem;
               text-align: center;
+              width: 100%;
+              max-width: 600px;
+              margin: 0 auto;
             }
 
             media-card h2 {
@@ -97,7 +99,7 @@
               text-decoration: underline;
             }
 
-            /* Make ALL media inside cards small and neat */
+           
             media-card picture,
             media-card img,
             media-card video,
@@ -105,8 +107,8 @@
             media-card audio,
             media-card figure,
             media-card math {
-              max-width: 150px;
-              width: 150px;
+              max-width: 350px;
+              width: 350px;
             }
 
             media-card picture,
@@ -206,7 +208,6 @@
     <progress value="50" max="100"></progress>
 </footer>
 
-<!-- Custom element WITHOUT shadow DOM -->
 <script>
 class MediaCard extends HTMLElement {
   connectedCallback() {
