trying to get image to load for local

--- a/experimentals.html
+++ b/experimentals.html
@@ -269,6 +269,7 @@ function renderCards(data) {
         media = document.createElement("img");
         media.src = item.src;
         media.alt = item.title;
+        console.log("RENDERING TYPE:", item.type);
         break;
 
       case "audio":
