trying to get image to load for local

--- a/experimentals.html
+++ b/experimentals.html
@@ -119,7 +119,6 @@
            
             media-card img,
             media-card video,
-            media-card audio,
             media-card canvas,
             media-card picture,
             media-card figure,
@@ -129,6 +128,12 @@
               height: auto !important;
               display: block !important;
               margin: 0 auto !important;
+            }
+            media-card audio {
+              width: 350px;
+              height: 40px;
+              display: block;
+              margin: 0 auto;
             }
             media-card video,
             media-card img,
