--- a/experimentals.html
+++ b/experimentals.html
@@ -129,9 +129,24 @@
               display: block !important;
               margin: 0 auto !important;
             }
+
             media-card audio {
               width: 350px;
               height: 40px;
+              display: block;
+              margin: 0 auto;
+            }
+            media-card img {
+              display: block;
+              width: 350px;     
+              max-width: 350px; 
+              height: auto;     
+              margin: 0 auto;   
+              border-radius: 10px; 
+}
+            
+            media-card math {
+              font-size: 1.5rem;
               display: block;
               margin: 0 auto;
             }
